# projet-micro-services-al4

./: .gitignore  Makefile  README.md  docker-compose.yml  enonce.md
documentation/: architecture.md  contrats-api.md  diagrammes.md  presentation-orale.md
documentation/decisions/: 0001-strategie-decoupe-microservices-par-charge.md  0002-decoupage-services-plateforme-livraison.md  0003-saga-orchestree-passage-commande.md  0004-redis-pubsub-broker-evenements.md  0006-api-gateway-nginx.md  (+6 more)
frontend/: .env.example  .gitignore  .gitkeep  .prettierrc  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
gateway/: Dockerfile  nginx.conf
livrables/: 1_documentation_architecture.md  2_diagrammes_architecture.md  3_contrats_api_openapi.md  4_slides_presentation.md  5_recueil_decisions_adr.md  6_presentation_soutenance.pptx  README.md
services/: .gitkeep
services/deliveries/: README.md  pyproject.toml
services/deliveries/app/: config.py  dependencies.py  events.py  main.py  seed.py
services/deliveries/app/repositories/: entities.py  interfaces.py  memory.py
services/deliveries/app/routes/: __init__.py  couriers.py  deliveries.py
services/deliveries/app/schemas/: couriers.py  deliveries.py  health.py
services/deliveries/app/services/: courier_service.py  delivery_service.py  exceptions.py  geo.py
services/deliveries/tests/: conftest.py  test_correlation.py  test_couriers.py  test_deliveries.py  test_delivery_edge_cases.py  test_events.py  test_health.py
(+237 files in other folders)
